k8s/istio-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default-peer-policy
  namespace: default
spec:
  mtls:
    mode: STRICT
