k8s/orders-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-service
  template:
    metadata:
      labels:
        app: orders-service
    spec:
      containers:
        - name: orders-service
          image: shop-grid-orders-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8088
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  selector:
    app: orders-service
  ports:
    - port: 8089
      targetPort: 8089
