k8s/products-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-service
  template:
    metadata:
      labels:
        app: products-service
    spec:
      containers:
        - name: products-service
          image: shop-grid-products-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8088
---
apiVersion: v1
kind: Service
metadata:
  name: products-service
spec:
  selector:
    app: products-service
  ports:
    - port: 8088
      targetPort: 8088
