k8s/users-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-service
  template:
    metadata:
      labels:
        app: users-service
    spec:
      containers:
        - name: users-service
          image: shop-grid-users-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  selector:
    app: users-service
  ports:
    - port: 8090
      targetPort: 8090
