k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopgrid-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: keycloak.shopgrid
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
    - host: api.shopgrid
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
#
    - host: api.shopgrid
      http:
        paths:
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 8090
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 8090
          - path: /api/v1/products
            pathType: Prefix
            backend:
              service:
                name: products-service
                port:
                  number: 8088
          - path: /api/v1/orders
            pathType: Prefix
            backend:
              service:
                name: orders-service
                port:
                  number: 8089
